--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "validator-wasm": "file:./validator-wasm"
   },
   "scripts": {
     "start": "react-scripts start",
