--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "validator-wasm": "file:./validator-wasm"
+    "validator-wasm": "file:./validator-wasm",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@types/wicg-file-system-access": "^2023.10.5"
+    "@types/wicg-file-system-access": "^2023.10.5",
+    "kaitai-struct": "^0.10.0"
   }
 }
