--- a/package.json
+++ b/package.json
@@ -51,6 +51,10 @@
     ]
   },
   "devDependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.16.0",
+    "@textea/json-viewer": "^3.4.1",
     "@types/wicg-file-system-access": "^2023.10.5",
     "fast-xml-parser": "^4.4.0",
     "kaitai-struct": "^0.10.0"
